# openforge

./: .gitignore  AGENTS.md  README.md  design.pen  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.a5c/: package.json  project-profile.json  project-profile.md
.a5c/processes/: angry-oracle-code-change.js  angry-oracle-code-change.mermaid.md  angry-oracle-code-change.process.md  angry-oracle-code-change.test.mjs
.github/workflows/: ci-comment.yml  ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: question-visibility-reconnect-fix.md
.sisyphus/evidence/: FINAL_VERIFICATION.md  README.md  TASK_SUMMARY.md  task-1-cargo-build.txt  task-1-cargo-test.txt  task-1-compile.txt  task-1-ipc-compile.txt  task-1-migration-v6.txt  task-1-rust-checkpoint-roundtrip.txt  task-1-stale-test-removed.txt  task-2-compile.txt  task-2-ipc.txt  task-2-parser-fallback.txt  task-2-parser-malformed.txt  task-2-parser-null-empty.txt  task-2-prompt-test.txt  task-2-sse-event-rename.txt  task-2-taskrow-fields.txt  task-2-vitest.txt  task-3-disabled.txt  task-3-dynamic-menu.txt  task-3-mcp-initialize.txt  task-3-subtitle-tests.txt  task-3-taskcard-tests.txt  task-3-vitest.txt  task-4-add-action.txt  task-4-defaults-render.txt  task-4-vitest.txt  task-5-cargo-build.txt  task-5-cargo-test.txt  task-5-compile.txt  task-5-sse-listener.txt  task-5-wiring.txt  task-6-backend-tests.txt  task-6-compile.txt  task-6-no-duplicate.txt  task-7-frontend-tests.txt  task-7-regression.txt  task-7-tests.txt
.sisyphus/plans/: ai-command-center-v1.md  claude-code-support.md  claude-pty-terminal.md  configurable-actions.md  creature-view.md  diff-performance.md  global-config.md  mcp-dynamic-titles.md  question-visibility-reconnect.md  self-review-design-alignment.md  self-review-flow.md  settings-redesign.md  task-view-terminal.md
patches/: @git-diff-view__svelte@0.0.13.patch
plugins/demo-hello-world/: manifest.json  package.json  tsconfig.json  vite.config.ts
scripts/: build-dev-plugin-artifacts.mjs  build-dev-plugin-artifacts.test.mjs  check-svelte-unused-imports.mjs  check-svelte-unused-imports.test.mjs  install-mac.sh  install.sh
src/: App.svelte  App.test.ts  app.css  main.ts  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugin-host/plugin-sdk/: index.js
src-tauri/src/: agent_coordinator.rs  builtin_plugins.rs  claude_bridge.rs  claude_hooks.rs  claude_sdk_manager.rs  cli_installer.rs  command_discovery.rs  db.rs  diff_parser.rs  git_worktree.rs  github_client.rs  github_poller.rs  http_server.rs  jira_client.rs  jira_sync.rs  main.rs  mcp_installer.rs  migration.rs  opencode_client.rs  opencode_manager.rs  orchestrator.rs  pi_extension.rs  pi_manager.rs  plugin_host.rs  plugin_installation.rs  plugin_installer.rs  plugin_rpc.rs  pty_manager.rs  review_parser.rs  review_prompt.rs  secure_store.rs  server_manager.rs  shepherd_agent.rs  shepherd_events.rs  shepherd_prompt.rs  sse_bridge.rs  whisper_manager.rs
src-tauri/src/commands/: agent_review.rs  agents.rs  authored_prs.rs  config.rs  files.rs  github.rs  jira.rs  mod.rs  opencode.rs  orchestration.rs  plugins.rs  projects.rs  pty.rs  review.rs  self_review.rs  shepherd.rs  tasks.rs  whisper.rs
src-tauri/src/db/: agent_review.rs  agents.rs  authored_prs.rs  board_status.rs  config.rs  migrations.rs  mod.rs  plugins.rs  projects.rs  pull_requests.rs  review.rs  self_review.rs  shepherd.rs  task_workspaces.rs  tasks.rs  worktrees.rs
src-tauri/src/github_client/: checks.rs  error.rs  events.rs  mod.rs  pulls.rs  reviews.rs  types.rs
src-tauri/src/mcp-server/: cli.js  cli.test.js  index.js  package.json
src-tauri/src/openforge-cli/: cli.test.js  openforge-skill.md
src-tauri/src/pi-extension/: openforge.ts
src-tauri/src/providers/: claude_code.rs  mod.rs  opencode.rs  pi.rs
(+489 files in other folders)
