[package]
name = "ai-command-center"
version = "0.0.1"
description = "AI Command Center - Desktop application for managing AI workflows"
authors = ["OpenCode"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8", features = ["devtools"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
which = "6.0"
nix = { version = "0.29", features = ["signal", "process"] }
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
eventsource-client = "0.16"
git2 = { version = "0.19", default-features = false }
futures = "0.3"
dashmap = "6"
dirs = "6"
once_cell = "1"
regex = "1"
ctrlc = "3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }
libc = "0.2"
portable-pty = "0.8"

[features]
# This feature is used for production builds where `devPath` points to the filesystem
# and CORS is enabled; `dev` builds to `http://localhost:1420` by default
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
