[package]
name = "openforge"
version = "0.0.1"
description = "Open Forge - Desktop application for managing AI workflows"
authors = ["OpenCode"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10", features = ["devtools", "test"] }
tauri-plugin-log = "2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
which = "6.0"

base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
eventsource-client = "0.16"
git2 = { version = "0.20", default-features = false }
futures = "0.3"
dashmap = "6"
dirs = "6"
once_cell = "1"
regex = "1"
ctrlc = "3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }
libc = "0.2"
portable-pty = "0.8"
whisper-rs = { version = "0.15", features = ["metal"] }
hound = "3.5"
sha1 = "0.10"
axum = "0.7"
rand = "0.8"
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"

[features]
# This feature is used for production builds where `devPath` points to the filesystem
# and CORS is enabled; `dev` builds to `http://localhost:1420` by default
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
